assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Exo:wght@100;200;300;400;500;600;700;800;900&family=Ubuntu:wght@300;400;500;700&display=swap");

body {
  font-family: "Exo", sans-serif;
  background-color: #fafafa;
}

html {
  scroll-behavior: smooth;
}

/* ------ Header ------ */

.header-background {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  min-height: 650px;
  margin-bottom: 100px;
  padding-bottom: 70px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #fff;
  background-image: url(../images/home-page/red-bg-coffee-rs.jpg);
  background-repeat: no-repeat;
  background-position: top center;
  background-size: cover;
  background-attachment: fixed;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #000;
  text-decoration: none;
  padding-right: 20px;
  padding-left: 20px;
  font-size: 15px;
}

.transparent-overlay {
  padding-top: 150px;
  padding-left: 150px;
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0);
}

.display {
  font-family: "Ubuntu", Helvetica, sans-serif;
  font-size: 3rem;
  font-weight: 400;
  color: rgba(255, 255, 255, 0.9);
  padding-right: 5px;
}

.motto {
  font-family: "Ubuntu", Helvetica, sans-serif;
  font-size: 2rem;
  font-weight: 300;
  color: rgba(255, 255, 255, 0.9);
  padding-right: 5px;
}

.navbar-brand {
  font-size: 1.2rem;
}

.navbar-light .navbar-brand {
  color: rgba(0, 0, 0, 0.73);
  font-weight: 600;
}

.btn {
  margin-right: 200px;
  margin-top: 30px;
}

/* ------ Review div ------ */

.review-block {
  max-width: 100%;
  margin-bottom: 40px;
}

.coffee-reviewer {
  font-family: "Exo", sans-serif;
  font-weight: 700;
  color: rgba(39, 39, 39, 0.73);
  font-size: 15px;
  text-align: center;
  text-transform: uppercase;
}

.paragraph-1 {
  margin: 0 50px;
  padding: 20px 250px;
  font-family: "Exo", sans-serif;
  font-weight: 500;
  color: rgba(0, 0, 0, 0.73);
  font-size: 20px;
  text-align: center;
  text-transform: capitalize;
}

/* ------ Containers ------ */

.body-container {
  padding-top: 0px;
  padding-right: 10px;
  padding-left: 10px;
  max-width: 100%;
}

.flex-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.slider-container {
  margin: 40px 0;
}

/* ------ Features ------ */

.feature-section {
  padding-top: 40px;
  font-family: "Ubuntu", Helvetica, sans-serif;
}

.row {
  margin: 0;
}

.feature-image-mask {
  max-width: 50%;
}

.feature-image {
  width: 100%;
  height: 100%;
  -o-object-fit: cover;
  object-fit: contain;
  -o-object-position: 50% 50%;
  object-position: 50% 50%;
}

.col-lg-6 {
  padding-left: 40px;
  padding-right: 0;
}

.heading-6 {
  font-family: "Ubuntu", Helvetica, sans-serif;
  color: rgba(0, 0, 0, 0.73);
  font-size: 18px;
  font-weight: 500;
  letter-spacing: 2px;
  text-transform: uppercase;
  text-align: left;
  margin-bottom: 20px;
}

.paragraph-2 {
  font-family: "Ubuntu", Helvetica, sans-serif;
  color: rgba(0, 0, 0, 0.73);
  font-size: 16px;
  text-transform: capitalize;
  text-align: left;
  margin-bottom: 30px;
}

.shop-btn-div {
  text-align: center;
  margin-top: 30px;
}

.btn--2 {
  margin: 0 0 5% 0;
}

/* ------ Carousal/slide ------ */

.carousel-inner img {
  width: 100%;
  height: 650px;
}

/* ------ About ------ */

.about-header {
  margin-bottom: 60px;
  margin-top: 50px;
  color: rgba(0, 0, 0, 0.73);
  font-weight: 500;
  text-align: center;
  text-transform: uppercase;
  font-family: "Ubuntu", Helvetica, sans-serif;
  font-size: 20px;
}

.about-paragraph {
  margin-right: 20px;
  margin-bottom: 50px;
  margin-left: 20px;
  padding-right: 100px;
  padding-left: 100px;
  color: rgba(0, 0, 0, 0.73);
  font-weight: 400;
  text-align: center;
  font-family: "Ubuntu", Helvetica, sans-serif;
  text-transform: capitalize;
}

.article-link {
  text-decoration: none;
  color: rgba(0, 0, 0, 0.73);
  text-align: center;
  font-weight: 500;
}

a:hover {
  color: rgba(0, 0, 0, 0.73);
  font-weight: 700;
}

#history {
  margin-bottom: 20px;
}

/* ------ Footer ------ */

footer {
  background-color: #000000e0;
  color: #fafafa;
  min-height: 120px;
  margin-top: 30px;
}

.footer-heading {
  font-family: "Ubuntu", Helvetica, sans-serif;
  text-align: center;
  font-size: 14px;
  letter-spacing: 1px;
  font-weight: 300;
  color: #fafafa;
  text-transform: uppercase;
  margin-top: 40px;
  margin-bottom: 20px;
}

.copy-right {
  font-family: "Ubuntu", Helvetica, sans-serif;
  text-align: center;
  font-size: 10px;
  font-weight: 300;
  color: #fafafa;
  text-transform: capitalize;
  padding-top: 45px;
  padding-bottom: 10px;
}

.info {
  font-family: "Ubuntu", Helvetica, sans-serif;
  text-align: center;
  font-size: 10px;
  font-weight: 300;
  color: #fafafa;
  text-transform: uppercase;
  letter-spacing: 1px;
  padding-bottom: 40px;
}

.social-links {
  text-align: center;
  padding-bottom: 15px;
  margin-bottom: 40px;
}

.social-links li a i {
  width: 32px;
  height: 32px;
  padding: 12px 0;
  border-radius: 50%;
  font-size: 13px;
  line-height: 7px;
  text-align: center;
  color: #fafafa;
  background: rgba(255, 1, 1, 0.73);
  transition: all 0.35s ease-in-out;
  -moz-transition: all 0.35s ease-in-out;
  -webkit-transition: all 0.35s ease-in-out;
  -o-transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
  background: rgba(255, 255, 255, 0.9);
  color: rgba(255, 1, 1, 0.73);
}

.container-fluid img {
  max-height: 250px;
  max-width: 50%;
  margin-left: 90px;
  padding-top: 20px;
  padding-left: 50px;
}

/* ------ Subscribe form------ */

.subscribe-form {
  padding-left: 20px;
}

.subscribe-form-input-wrapper {
  text-align: center;
}

.subscribe-form-input {
  margin-bottom: 0px;
  background-color: #fafafa;
  border: none;
}

.btn--subscribe {
  background-color: rgba(255, 1, 1, 0.73);
  border: none;
  color: #fafafa;
  margin: 0;
}

/* ----------- Contact form ----------- */

.modal-content {
  background-color: #fafafae5;
  color: #000000;
}

.modal {
    top: 15%;
}

/* ----------- shop.html ----------- */

#page-2 .header-background {
  background-image: none;
  background-color: #fafafa;
  min-height: 0;
  margin-bottom: 0;
  padding-left: 30px;
  padding-right: 30px;
  font-size: 15px;
}

#page-2 .navbar-light .navbar-brand {
  font-size: 25px;
}

#page-2 .col-lg-8 {
  margin-left: 0px;
  padding-left: 18%;
  padding-right: 5%;
  margin-bottom: 70px;
}

#page-2 .col-lg-4 {
  padding: 0;
}

#page-2 .carousel-inner img {
  width: 100%;
  height: 400px;
}

.product-heading {
  padding-top: 40px;
  padding-bottom: 10px;
  text-transform: uppercase;
  font-size: 16px;
  font-weight: 600;
  letter-spacing: 2px;
  color: rgba(0, 0, 0, 0.73);
}

.price {
  color: rgba(0, 0, 0, 0.5);
  padding-bottom: 30px;
  letter-spacing: 1px;
}

.strike {
  background: linear-gradient(to left top, transparent 47.75%, red, black, transparent 52.25%);
}

.out-of-stock {
  color: rgba(230, 5, 5, 0.85);
  text-transform: uppercase;
  font-size: 17px;
  font-weight: 700;
  margin-bottom: 15px;
}

.product-message {
  color: rgba(0, 0, 0, 0.5);
  padding-bottom: 30px;
  padding-right: 40%;
  text-transform: capitalize;
  font-size: 15px;
  font-weight: 600;
}

.flavour {
  color: rgba(0, 0, 0, 0.73);
  text-transform: capitalize;
  font-size: 18px;
  font-weight: 600;
}

.btn-sign-up {
  margin: 0;
}

#page-2 .btn-outline-light:hover {
  color: rgba(230, 5, 5, 0.85);
  background-color: #f8f9fa;
  border-color: rgba(230, 5, 5, 0.85);
}

/* ------ Media query ------ */

@media only screen and (max-width: 768px) {
  .display {
    font-size: 2.5rem;
    font-weight: 400;
    color: rgba(255, 255, 255, 0.9);
  }

  .motto {
    font-size: 1.5rem;
    font-weight: 300;
    color: rgba(255, 255, 255, 0.9);
    padding-right: 60px;
  }

  .btn {
    margin-right: 230px;
    margin-top: 15px;
  }

  .btn--2 {
    margin: 0 0 10% 0;
  }

  .paragraph-1 {
    padding: 20px 100px;
  }

  .col-lg-6 {
    padding-left: 0;
  }

  .flex-container {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .feature-section {
    padding-top: 0;
  }

  .feature-image-mask {
    margin-right: 0px;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    -ms-grid-row-align: center;
    align-self: center;
  }

  .feature-image {
    width: 100%;
    height: 100%;
    margin-left: 50%;
  }

  .heading-6 {
    text-align: center;
    padding-right: 0;
    margin: 15px 20%;
  }
  .paragraph-2 {
    text-align: center;
    padding-right: 0;
    margin: 0 20% 50px;
  }

  .about-paragraph {
    padding-right: 60px;
    padding-left: 60px;
  }

  .btn--subscribe {
    margin-right: 0;
  }

  .container-fluid img {
    max-width: 75%;
    padding-top: 25px;
    padding-left: 40px;
    margin-left: 20px;
  }

  #page-2 .col-lg-8 {
    margin-bottom: 0;
    padding-left: 15%;
    padding-right: 15%;
  }

  #page-2 .col-lg-4 {
    padding-left: 15%;
    padding-right: 15%;
    margin-bottom: 70px;
  }
}

@media only screen and (max-width: 600px) {
  .header-background {
    padding-right: 0;
    padding-left: 0;
  }

  .transparent-overlay {
    padding-top: 25%;
    padding-left: 100px;
    padding-right: 10px;
    padding-bottom: 0;
  }

  .display {
    font-size: 28px;
  }

  .motto {
    font-size: 23px;
    padding-top: 20px;
    padding-right: 0;
    padding-left: 15%;
  }

  .btn {
    margin-right: 125px;
    margin-top: 70px;
  }

  .btn--2 {
    margin: 0 0 10% 0;
  }

  .paragraph-1 {
    padding: 0 0 20% 0;
    margin: 0 20px;
  }

  .coffee-reviewer {
    padding: 25px;
  }

  .feature-image {
    width: 140%;
    height: 100%;
    margin-left: 30%;
    padding-bottom: 30%;
  }

  .paragraph-2 {
    padding: 0;
    margin: 20px;
  }

  .carousel-inner img {
    width: 100%;
    height: 350px;
  }

  .about-header {
    padding: 0;
    text-align: center;
    margin-left: 5%;
    margin-right: 20px;
  }

  .about-paragraph {
    padding-right: 0;
    padding-left: 0;
    text-align: left;
    margin-left: 5%;
    margin-right: 5%;
  }

  .btn--subscribe {
    margin: 0;
  }

  .copy-right {
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 15px;
  }

  .info {
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 15px;
  }

  .social-links {
    margin-bottom: 0;
    padding-bottom: 0;
  }

  .container-fluid img {
    margin-top: 0;
    margin-left: 22.5%;
    margin-bottom: 20px;
    max-width: 50%;
  }

  #page-2 .header-background {
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
  }

  #page-2 .col-lg-6 {
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
  }

  .product-heading {
    padding-top: 0;
    font-size: 20px;
    text-align: left;
    padding-bottom: 20px;
  }
  .price {
    padding-bottom: 20px;
    text-align: left;
  }

  .out-of-stock {
    font-size: 20px;
    text-align: left;
  }

  .product-message {
    text-align: left;
    font-size: 15px;
    padding-right: 0;
  }

  .flavour {
    padding-bottom: 20px;
    text-align: left;
    font-size: 20px;
  }

  .btn-sign-up {
    text-align: left;
    margin: 0;
  }

  #page-2 .col-lg-8 {
    padding-left: 0;
    padding-right: 0;
  }

  #page-2 .col-lg-4 {
    padding-left: 15px;
    padding-right: 15px;
  }
}

